[tool.poetry]
name = "poetry-tutorial-project"
version = "0.1.0"
description = ""
authors = ["hivinpolat <hivin.polat@dop.com.tr>"]
readme="README.rst"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
